--- a/01-HTML-CSS/09-animations/tamir/chaim/style.scss
+++ b/01-HTML-CSS/09-animations/tamir/chaim/style.scss
@@ -1,6 +1,12 @@
+body {
+  padding: 0;
+  margin: 5px;
+}
+
 .wrapper {
   border-radius: 40px;
   background-color: rgb(218, 212, 212);
+
 
   img {
     width: 100%;
@@ -16,6 +22,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    :hover {
+      cursor: pointer;
+      border-bottom: 2px solid brown;
+    }
   }
 
   &__subinfo {
@@ -24,6 +35,11 @@
     align-items: center;
     margin: 10px;
     padding-left: 10px;
+
+    :hover {
+      cursor: pointer;
+      border-bottom: 2px solid brown;
+    }
 
     i {
       color: orange;
@@ -38,6 +54,7 @@
 
   &__h4 {
     padding-right: 15px;
+
   }
 }
 
@@ -51,10 +68,13 @@
   margin: 0vh;
   border-radius: 30px;
 
+  :hover {
+    cursor: pointer;
+  }
 
   .m {
     font-size: 3vh;
-   text-align: right;
+    text-align: right;
   }
 }
 
@@ -65,26 +85,14 @@
   border-radius: 30px;
   height: 150px;
 
-  h5 {
+  &__h5 {
     font-size: 3vh;
-    padding: 15px;
-  }
+    padding-left: 15px;
 
-  h6 {
-    font-size: 2vh;
-    position: relative;
-    left: 100vh;
-    bottom: 0vh;
-  }
-p{
-  position: relative;
-  left: 85vh;
-  bottom: 15vh;
-}
-  i {
-    position: relative;
-    left: 95vh;
-    bottom: 22vh;
+  &__h6 {
+      font-size: 3vh;
+      padding-right: 10px;
+    }
   }
 }
 
@@ -93,8 +101,8 @@ p{
   width: 100%;
   height: 100px;
   border-radius: 30px;
-  position: relative;
-  bottom: 25vh;
+
+
 
   h5 {
     font-size: 8vh;
@@ -128,26 +136,31 @@ p{
     }
   }
 
-  .container1 {
-    &__p{
-      font-size: 4em;
+  .wrapper2 {
+    .container1 {
+      font-size: 3em;
+
+      .m {
+        font-size: 2em;
+      }
+
     }
   }
-  .container2{
-    &__h4 {
+
+  .container2 {
+    h5 {
       font-size: 2em;
-    }
 
-  &__p{
-    font-size: 3em;
+
+      h6 {
+        font-size: 2em;
+      }
+    }
   }
 
-    &__h5 {
-      font-size: 5em;
-    }
-
-    &__h6 {
-      font-size: 5em;
+  .container3 {
+    h5 {
+      font-size: 3em;
     }
   }
 }
