--- a/01-HTML-CSS/09-animations/tamir/chaim/style.scss
+++ b/01-HTML-CSS/09-animations/tamir/chaim/style.scss
@@ -85,14 +85,20 @@ body {
   border-radius: 30px;
   height: 150px;
 
-  &__h5 {
+  h5 {
     font-size: 3vh;
-    padding-left: 15px;
+    padding-left:25px;
+   
+   
+  }
 
-  &__h6 {
-      font-size: 3vh;
-      padding-right: 10px;
-    }
+  .mar {
+    font-size: 3vh;
+    padding-left: 20px;
+    text-align: right;
+    position: relative;
+    bottom: 130px;
+    right: 30px;
   }
 }
 
@@ -103,9 +109,8 @@ body {
   border-radius: 30px;
 
 
-
   h5 {
-    font-size: 8vh;
+    font-size: 5vh;
     padding: 15px;
     text-align: center;
 
@@ -150,11 +155,10 @@ body {
   .container2 {
     h5 {
       font-size: 2em;
+    }
 
-
-      h6 {
-        font-size: 2em;
-      }
+    h6 {
+      font-size: 2em;
     }
   }
 
