--- a/01-HTML-CSS/09-animations/Suarez/style.scss
+++ b/01-HTML-CSS/09-animations/Suarez/style.scss
@@ -1,42 +1,327 @@
+body{
+  padding: 0;
+  margin: 0;
 
-    body{
-        background-color:  #0000005e;
-    }
-    .circle {
-        height: 50px;
-        position: absolute;
-        width: 20px;
-        height: 20px;
-        margin-left: 50%;
-        top: 50%;
-        border-radius: 100%;
-        background-color: rgb(177, 12, 12);
-        animation: move-the-circle 1s infinite;
-        transform-origin: center center;
+  // max-width:600px;
+ 
+  font-family: 'Convergence', sans-serif;
+  font-family: 'Dosis', sans-serif;
+  font-family: 'Inter', sans-serif;
+  font-family: 'Italianno', cursive;
+  font-family: 'Shippori Antique B1', sans-serif;
+.wrapper{
+  display: flex;
+  border-radius:40px 40px 0 0 ;
+position: relative;
+  flex-direction: column;
+  background-color: #e9e9e9;
+}
+}
+
+
+.main{
+  color: #ffffff;
+  background-color:#181c2a;
+  border-radius:40px ;
+
+  padding-block: 50px;
+  padding-left: 30px;
+  padding-right: 30px;
+  &__header{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      &--header{
+          font-size: 25px;
       }
+      &--search{
+          position: absolute;
+          top: 12%;
+          right: 1%;
+          transform: translate(-50%,-50%);
+          .input {
+              // padding: 10px;
+              width: 49px;
+              height: 49px;
+              background: none;
+              border: 2px solid hsl(150, 50%, 50%);
+              border-radius: 50px;
+              box-sizing: border-box;
+              font-size: 20px;
+              color: hsl(150, 50%, 50%);
+              outline: none;
+              transition: .7s;
+          }
+          &:hover input{
+         
+              width: 250px;
+              background: #272133;
+              border-radius: 30px;
+          }
+          i{
+              position: absolute;
+              top: 50%;
+              right: 3px;
+              transform: translate(-50%,-50%);
+              font-size: 20px;
+              color: hsl(150, 50%, 50%);
+              transition: .2s;
+          }
+          &:hover i{
+              opacity: 0;
+              // z-index: -1;
+          }
+      }
+  }
+  &__cards{
+     
+      display: flex;
+      flex-direction: row;
+      overflow-x: scroll;
+      &::-webkit-scrollbar {
+          height:10px ;
+          &-track {
+              background: none; 
+            }
+            &-thumb {
+               border-radius: 10px;
+                width: 5px;
+              background: none;
+              &:hover {
+                  background: #b40606; 
+                }
+            }
+        }
+        
+        
+        
+     
+   
+      .main__card{
+          transition: transform 2s;
+          transform-style: preserve-3d;
+          cursor: pointer;
+          background-color: transparent;
+          perspective: 1000px;
+          border-radius:25px ;
+          display: flex;
+         text-align: center;
+          align-items:flex-end ;
+          margin: 7px;
+          height: 160px;
+          min-width:180px;
+          background-size: cover;
+          p{
+              color: #ffffff;
+          }
+      }
+  }
+  &__box{
+      &--text{
+          font-size: large;
+          margin-bottom: 30px;
+      }
+      &--img{
+
+          padding: 20px;
+          border-radius: 17px;
+          background-color:#9a9a9a54 ;
+          display: flex;
+          flex-direction: row;
+          img{
+          border-radius: 20px;
+              height: 80px;
+              width: 80px;
+              margin-right: 20px;
+          }
+          &--text{
+              display: flex;
+              flex-direction: column;
+              justify-content: space-evenly;
+              &--price{
+                  font-size: small;
+              }
+          }
+      }
+  }
+
+}
+.contaniar__item{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &--header{
+  color:#181c2a;
+      font-size: large;
+      padding:  30px;
+  }
+  &--img{
+      max-width: 800px;
+      border-radius:40px 40px 0 0 ;
+      margin-left: 40px;
+      margin-right: 40px;
       
-      @for $num from 1 through 8 {
-        .circle:nth-child(#{$num}) {
-          left: ($num - 1) * 30px;
-          animation-delay: $num * .1s;
-        }
+      background-color: #fffbfb;
+      img{
+          background-size: cover;
+          border-radius:40px ;
+         max-height: 430px;;
+          width:  100%;
       }
+      &--model{
+          padding: 20px;
+          font-size: x-large;
+      }
+  }
+}
+
+.box__bar{
+  border-radius:40px 40px 0 0;
+  padding: 30px;
+  display: flex;
+  bottom: 0;
+  flex-direction: row;
+  background-color: #ffffff;
+  justify-content: space-around;
+  position: -webkit-sticky;
+  height: 30px;
+  // margin-bottom: 8px;
+  position: sticky;
+  &--item {
+  opacity: 0.5;
+  &:hover{
+
+
+      opacity: 1;
+  }
+      &--plus 
       
-      @keyframes move-the-circle {
-        0% {
-          transform: translate(0, 0) scale(1);
-          opacity: 1;
-          background-color: rgb(177, 12, 12);
-        }
-        50% {
-          transform: translate(0, 50px) scale(.4);
-          opacity: .5;
-          background-color: black;
-        }
-        100% {
-          transform: translate(0, 0) scale(1);
-          opacity: 1;
-          background-color: rgb(177, 12, 12);
-        }
+      img{
+          transition: transform .5s;
+          width: 55px;
+          &:hover{
+              transform: scale(1.2);
+          }
       }
+    
+  }
+}
+
+
+
+
+
+
+
+
+
+.front, .back {
+  height: 176px;
+  width: 176px;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius:25px ;
+  backface-visibility: hidden;
+}
+
+.front {
+   background-size: cover;
+  border: 2px solid black;
+  &__button{
+      button {
+          font-family: inherit;
+          font-weight: bold;
+          /* color: var(--white-1); */
+          color: hsl(0, 0%, 90%);
+        
+          letter-spacing: 2px;
+        
+          padding: 9px 20px;
+          border: 1px solid hsl(0, 0%, 50%);
+          border-radius: 1000px;
+          background: #0000004a;
+          transition: 0.3s;
+        
+          cursor: pointer;
+        }
+        
+        button:hover,
+        button:focus {
+          color: hsl(150, 50%, 50%);
+          background: hsla(150, 25%, 10%, 0.2);
+          border-color: currentColor;
+        }
+        
+        button:active {
+          transform: translate(2px);
+        }
+        
+  }
+}
+
+.front:hover {
+    
+  bottom: 2px;
+  left: 2px;
+  box-shadow: 0px 0px 20px 1px #000;
+}
+
+.back {
+    height: 100%;
+  border: 2px solid black;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  transform: rotateY(180deg);
+  &__one{
+      font-size: 25px;
+      margin-right: 10px;
+      margin-left: 5px;
+  }&__partition{
+     background-color: hsl(150, 50%, 50%);
+     height: 85px;
+     width: 8px;
+  }&__two{
+      margin-right: 3px;
+      font-size: 11px;
+      margin-left: 10px;
+  }
+}
+
+.back:hover {
+  bottom: 2px;
+  right: 2px;
+  box-shadow: 0px 0px 20px 1px #000;
+}
+.container {
+  margin: 20px;
+  width: 100%;
+  height: auto;
+  perspective: 1000px;
+}
+.main__card{
+    padding-top:20px ;
+  transition: transform 2s;
+  transform-style: preserve-3d;
+  cursor: pointer;
+  background-color: transparent;
+  perspective: 1000px;
+  border-radius:25px ;
+  display: flex;
+ text-align: center;
+  align-items:flex-end ;
+  margin: 7px;
+  height: 160px;
+  min-width:180px;
+  background-size: cover;
+  
+img{
+  height: 100%;
+ width: 100%;
+}
+}
 
