--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/nav.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/nav.scss
@@ -18,7 +18,7 @@ nav {
 
   :not(.hidden) {
     background-color: #141414;
-    color: #f0f0f2;
+    
   }
 }
 
@@ -36,13 +36,14 @@ nav ul {
 
   li a i {
     background-color: #f0f0f2;
-    color: #141414;
+    color: rgba(255,255, 255, .3);
     display: block;
     padding: 0.8rem 1rem;
     text-decoration: none;
 
     &:hover {
-      background: rgb(117, 116, 116);
+      background: rgb(46, 46, 46);
+      color: rgba(255,255, 255, 1);
       text-underline-position: below;
       border-radius: 3rem;
     }
@@ -78,20 +79,17 @@ nav ul {
     padding-inline: 0.5rem;
     flex-direction: row;
     right: 20vw;
+    
 
     &-square {
       align-self: center;
       margin-left: 1rem;
-      width: 3ch;
+      padding: .8ch 1.3ch;
       overflow: hidden;
       text-align: center;
-
-      & > h3 {
-        padding: 1vw;
-        background: #141414;
-        color: #f0f0f2;
-        border-radius: 7px;
-      }
+      background: #141414;
+      color: #f0f0f2;
+      border-radius: 7px;
     }
   }
 
@@ -130,16 +128,17 @@ nav ul {
       }
     }
   }
+#info{
+  animation: fade 0.5s infinite alternate;
+}
+#monthly-tasks, #home, #chart{ 
+&:hover {
+    .material-icons {
+      animation: pulse 0.5s infinite alternate;
 
-  #monthly-tasks, #home, #chart, #info{ 
-    &:hover {
-      .material-icons {
-        animation: pulse 0.5s infinite alternate;
-
-      }
     }
   }
-
+}
   .hidden {
     top: 0;
     display: inline;
@@ -154,7 +153,8 @@ nav ul {
     }
 
     &__mytasks {
-      display: none;
+      position: absolute;
+      top: 10vh;
     }
   }
 }
@@ -185,7 +185,14 @@ h3 {
     opacity: 0.25;
   }
 }
-
+@keyframes fade {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0.25;
+  }
+}
 //icon styles, use as
 .md-18 {
   font-size: 18px;
@@ -205,4 +212,11 @@ h3 {
 
 .md-40 {
   font-size: 40px;
+}
+
+.md-light {
+  color: rgba(255, 255, 255, 1);
+}
+.md-inactive {
+  color: rgba(255,255, 255, .3);
 }
