--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/style.scss
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/style.scss
@@ -1,19 +1,19 @@
 body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin:0;
+  padding:0;
 }
 
 .Container {
   display:grid;
-  margin:0;
   height: 100vh;
-  width: 100%;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 0.1fr auto 0.1fr;
+  grid-template-rows: 1fr auto 1fr;
   grid-template-areas:
   "header header header"
   "Wil Roi Yael"
   "Navbar Navbar Navbar";
-  grid-gap:0.2rem;
+
 
   &__header {
     border:1px solid red;
@@ -55,39 +55,8 @@ body {
       background-color: black;
       grid-area: Wil;
 
-      &__statBox {
-        display: grid;
-        margin: auto;
-        width:95%;
-        height: 100%;
-        grid-template-rows: 1fr 2fr 1fr 1fr ;
-        border: 1px solid red;
 
-        &__heading {
-          display: grid;
-          justify-content: center;
-          align-items: center;
-          border: 1px solid red;
-          color:white;
-          font-size: 30px;
-        }
-        &__gaugeBox {
-          display: grid;
-          align-items: center;
-          border: 1px solid red;
-        }
-        &__statBtn {
-          display: grid;
-          border: 1px solid red;
-
-        }
-        &__viewDetails {
-          display: grid;
-          border: 1px solid red;
-        }
-      }
- 
-  }
+    }
 
   &__Roi {
     border:1px solid red;
@@ -99,7 +68,6 @@ body {
     grid-area: Yael;
   }
   &__Navbar {
-    height: 5vh;
     border:1px solid red;
     background-color: black;
     grid-area: Navbar;
@@ -121,94 +89,25 @@ body {
   }
 }
 
-.gauge {
-  
-  max-width: 350px;
-
-  &__body {
-    width: 300px;
-    height: 300px;
-    position: relative;
-    border-radius:50%;
-    overflow: hidden;
-
-   &__fill {
-     position:absolute;
-     top:100%;
-     left:0;
-     width:inherit;
-     height: 100%;
-     background: rgb(141, 53, 223);
-     transform-origin: center top;
-     transform: rotate(0.5turn);
-     transition: transform 3s ease-out;
-   }
-
-   &__cover1 {
-     width:75%;
-     height:75%;
-     background: black;
-     border-radius: 50%;
-     position:absolute;
-     top:12.5%;
-     left:12.5%;
-     display:flex;
-     align-items: center;
-     justify-content: center;
-
-
-     &__circle {
-      width:70%;
-      height: 70%;
-      border-radius: 50%;
-      background-color: rgb(31, 28, 28);
-      color:white;
-      display:flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-  
-     &--a {
-        font-size: 20px;
-      }
-     &--b {
-        font-size: 30px;
-      }
-     &--c {
-        font-size: 15px;
-      }
-     }
-   }
-
-   &__cover2 {
-     width:100%;
-     height:40%;
-     position:absolute;
-     top:70%;
-     background: black;
-   }
-  }
-}
-
 @media only screen and (max-width:1200px){ 
-  .Container {
-    grid-template-columns: 1fr;
-    grid-template-rows: 0.1fr auto 0.1fr;
-    grid-template-areas:
-    "header"
-    "Wil"
-    "Navbar";
+ .Container {
+grid-template-columns: 1fr;
+ grid-template-rows: 0.1fr auto 0.1fr;
+ grid-template-areas:
+"header"
+/"Wil"
+"Navbar";
 
-    &__Roi {
-      display: none;
-    }
-    &__Yael {
-      display: none;
-    }
+&__Roi {
+display: none;
+}
+ &__Yael {
+ display: none;
   }
+ }
 }
 
-@media only screen and (min-width:1200px){ 
+@media only screen and (min-width:1000px){ 
   
   .Container {
     grid-template-columns: 1fr 1fr 1fr;
@@ -238,4 +137,83 @@ body {
       display: none;
     }
   }
+}
+
+.TopBox {
+  padding-left: 20px;
+  padding-bottom: 20px;
+  padding-top: 5px;
+  margin-top: 5%;
+  margin-left: 8%;
+  margin-right: 8%;
+  height: 160px;
+  background-color: #9966cc;
+  background-image: linear-gradient(to left, #9966cc, #cca1f0);
+  box-shadow: 0px 0px 1px 1px #cca1f0;
+  border-radius: 15px;
+  color: white;
+}
+
+.container {
+  height: 6px;
+  width: 50%;
+  background-color: black;
+  position: relative;
+  border-radius: 4px;
+}
+
+.container .progressBar {
+  position: absolute;
+  height: 100%;
+  background-color: orange;
+  animation: progress-animation 3s forwards;
+  border-radius: 4px;
+}
+
+@keyframes progress-animation {
+  0% {
+      width: 0%;
+  }
+  100% {
+      width: 70%;
+  }
+}
+
+.Box {
+  margin-top: 5%;
+  margin-left: 8%;
+  height: 330px;
+  width: 300px;
+  background-color: #2a2727;
+  color: white;
+  border-radius: 15px;
+  box-shadow: 0px 0px 0px 1px #888888;
+}
+
+.BoxOptions {
+  margin-top: 8%;
+  margin-left: 10%;
+  margin-right: 10%;
+  display: inline-flex;
+  height: 50px;
+  width: 85%;
+  background-color: #030203;
+  border-radius: 5px;
+}
+
+.BoxOptions>p {
+  margin-right: 40px;
+}
+
+.BoxOptions>img {
+  width: 24px;
+  height: 24px;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+#arrow {
+  margin-left: 48px;
 }
