--- a/01-HTML-CSS/09-animations/tamir/chaim/style.scss
+++ b/01-HTML-CSS/09-animations/tamir/chaim/style.scss
@@ -74,10 +74,10 @@ body {
 
   .m {
     font-size: 3vh;
-    text-align: right;
+    padding-left: 190px; ;
+
   }
 }
-
 .container2 {
   background-color: rgb(218, 212, 212);
   justify-content: space-between;
@@ -91,7 +91,6 @@ body {
    
    
   }
-
   .mar {
     font-size: 3vh;
     padding-left: 20px;
