--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/wil.css
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/wil.css
@@ -19,6 +19,9 @@ body {
     box-shadow: 0px 0px 1px 1px #cca1f0;
     border-radius: 15px;
 }
+.TopBox:hover{
+    cursor: pointer;
+}
 
 .container {
     height: 6px;
@@ -59,11 +62,19 @@ body {
     margin-left: 10%;
     margin-right: 10%;
     display: inline-flex;
+    justify-content: space-between;
     height: 50px;
     width: 85%;
     background-color: #030203;
     border-radius: 5px;
 }
+.BoxOptions:hover{
+    cursor: pointer;
+    background-color: #6d6b6d;
+
+}
+
+
 
 .BoxOptions>p {
     margin-right: 40px;
@@ -76,8 +87,4 @@ body {
     margin-right: 15px;
     margin-top: auto;
     margin-bottom: auto;
-}
-
-#arrow {
-    margin-left: 48px;
 }
