--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/yael/style.scss
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/yael/style.scss
@@ -76,12 +76,7 @@
     background-image: linear-gradient(to left, #9966cc, #cca1f0);
   box-shadow: 0px 0px 1px 1px #cca1f0;
   border-radius: 15px;
-  #calender,#star{
-    height: 14px;
-    width: 17px;
-    padding-right:3px ;
-    
-  } 
+  
   img{
     position: relative;
     top: 20px;
@@ -159,10 +154,10 @@ img{
           }}
       
   #card4B{
-    background-color: rgb(238, 255, 192);
+    background-color: #cca1f0;
     //background-image: linear-gradient(to left, rgb(238, 255, 192), rgb(248, 214, 220));
-  box-shadow: 0px 0px 1px 1px #cca1f0;
-  border-radius: 15px;  
+  //box-shadow: 0px 0px 1px 1px #cca1f0;
+  border-radius:15px;  
   img{
     position: relative;
     left:10px;
@@ -174,8 +169,8 @@ img{
  
       
 #card4{
-  background-color: rgb(238, 255, 192);
-  background-image: linear-gradient(to left, rgb(238, 255, 192), rgb(248, 214, 220));
+  background-color:#9966cc;
+  background-image: linear-gradient(to left, #9966cc, #cca1f0);
 box-shadow: 0px 0px 1px 1px #cca1f0;
 border-radius: 15px;  
 img{
@@ -187,7 +182,7 @@ img{
     }
 }
   #card5B{
-    background-color: lightgrey;
+    background-color: lightblue;
     //background-image: linear-gradient(to left, orange, rgb(231, 218, 193));
   box-shadow: 0px 0px 1px 1px #cca1f0;
   border-radius: 15px; 
@@ -203,8 +198,8 @@ img{
 }
 
 #card5{
-  background-color: orange;
-  background-image: linear-gradient(to left, orange, rgb(231, 218, 193));
+  background-color: rgb(255,192,203);
+  background-image: linear-gradient(to left, rgb(255,192,203), rgb(248, 214, 220));
 box-shadow: 0px 0px 1px 1px #cca1f0;
 border-radius: 15px; 
 img{
@@ -218,7 +213,7 @@ img{
     }
 } 
 #card6B{
-  background-color: beige;
+  background-color: #cca1f0;
   background-image: linear-gradient(to left, turquoise rgb(231, 218, 193));
 box-shadow: 0px 0px 1px 1px #cca1f0;
 border-radius: 15px; 
@@ -234,8 +229,8 @@ img{
     }
 }
 #card6{
-  background-color: turquoise;
-  background-image: linear-gradient(to left, turquoise rgb(231, 218, 193));
+  background-color: grey;
+        background-image: linear-gradient(to left, grey, rgb(213, 228, 233));
 box-shadow: 0px 0px 1px 1px #cca1f0;
 border-radius: 15px; 
 img{
@@ -276,6 +271,7 @@ img{
             text-align:left;
             flex-direction: row-reverse;
             padding-left: 15px;
+            
             @mixin margin {};
             cursor: pointer;
             overflow: hidden;
@@ -469,6 +465,7 @@ img{
     
       &__item {
           display: block;
+          color: white;
           //flex-direction: row-reverse;
           @mixin margin {};
           cursor: pointer;
@@ -508,6 +505,7 @@ img{
           position:relative;
           top:10px;
           right:20px;
+          color: white;
       }
           // &--important
       &_subtitle {
