--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/yael/style.scss
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/yael/style.scss
@@ -51,10 +51,23 @@
       background-color: #030203;
       color: white;
   }
-  
+
+h1{
+   position: relative;
+   top:20px; 
+  display: flex;
+}
   h1>img{
     width: 24px;
     height: 24px;
+  }
+  
+  #menu1{
+    height:70px;
+    width:70px;
+    position:relative;
+    left:80%;
+    bottom:20px;
   }
   #card1B{
     background-color:lightblue;
@@ -161,8 +174,8 @@ img{
   img{
     position: relative;
     left:10px;
-    width: 80%;
-    height: 110%;
+    width: 90%;
+    height: 100%;
     object-fit: fill;
       }
 }
@@ -219,9 +232,9 @@ box-shadow: 0px 0px 1px 1px #cca1f0;
 border-radius: 15px; 
 img{
   position: relative;
-  top:20px;
-  left: 20px;
-  width: 100%;
+  top:30px;
+  left: 30px;
+  width: 80%;
   //height: 101%;
  
   height: 90%;
@@ -253,7 +266,7 @@ img{
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
-    padding-top: 50px;
+    padding-top: 20px;
  
     // &__slider owl-carousel {
     &__slider{
@@ -300,7 +313,8 @@ img{
        
            width:120%;
            
-                   &__title {
+           
+            &__title {
             @include font(20px, true);
             padding-top: 30px;
             padding-bottom: 10px;
@@ -344,7 +358,7 @@ img{
             color: white;
             
 
-            font-size: 13px;
+            font-size: 15px;
             
             border-radius: 15px;
             border: none;
@@ -360,7 +374,7 @@ img{
             color: white;
             
 
-            font-size: 13px;
+            font-size: 15px;
             
             border-radius: 15px;
             border: none;
