--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/wil.scss
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/wil.scss
@@ -18,9 +18,10 @@ body {
     background-image: linear-gradient(to left, #9966cc, #cca1f0);
     box-shadow: 0px 0px 1px 1px #cca1f0;
     border-radius: 15px;
-}
-.TopBox:hover{
+
+&:hover{
     cursor: pointer;
+}
 }
 
 .container {
@@ -29,14 +30,14 @@ body {
     background-color: black;
     position: relative;
     border-radius: 4px;
-}
 
-.container .progressBar {
+& .progressBar {
     position: absolute;
     height: 100%;
     background-color: orange;
     animation: progress-animation 3s forwards;
     border-radius: 4px;
+}
 }
 
 @keyframes progress-animation {
@@ -55,9 +56,8 @@ body {
     background-color: #2a2727;
     border-radius: 15px;
     box-shadow: 0px 0px 0px 1px #888888;
-}
 
-.BoxOptions {
+&__BoxOptions {
     margin-top: 8%;
     margin-left: 10%;
     margin-right: 10%;
@@ -68,23 +68,22 @@ body {
     background-color: #030203;
     border-radius: 5px;
 }
-.BoxOptions:hover{
+}
+.Box__BoxOptions:hover{
     cursor: pointer;
     background-color: #6d6b6d;
-
 }
 
-
-
-.BoxOptions>p {
-    margin-right: 40px;
+.Box__BoxOptions>p {
+    margin-right: 60px;
 }
-
-.BoxOptions>img {
+.Box__BoxOptions>img {
     width: 24px;
     height: 24px;
     margin-left: 15px;
     margin-right: 15px;
     margin-top: auto;
     margin-bottom: auto;
+
 }
+
