--- a/02-JavaScript/07-DOM manipulations/Example/02-events/style.scss
+++ b/02-JavaScript/07-DOM manipulations/Example/02-events/style.scss
@@ -1,13 +1,11 @@
-.btn{
-   
+.btn {
     border-radius: 200px;
-    border:2px solid rgb(61, 61, 61);
+    border: 2px solid #3d3d3d;
     padding: 20px 40px;
     width: fit-content;
     cursor: pointer;
     user-select: none;
-
-    &:hover{
-        background-color: beige;
-    }
-}
+  }
+  .btn:hover {
+    background-color: beige;
+  }
