--- a/02-JavaScript/07-DOM manipulations/Example/shani-HW/EVENTS-HW/style.scss
+++ b/02-JavaScript/07-DOM manipulations/Example/shani-HW/EVENTS-HW/style.scss
@@ -7,17 +7,26 @@ body{
   display:flex;
   flex-direction: row;  
   justify-content:center;
+  margin-top:5rem;
 
   img{
       width:20%;
       height:20%;
+      transition: all .2s ease-in-out; 
+      margin:2rem;
+      &:hover{
+        transform: scale(1.1); 
+
+      }
   }
 
   
 }
 
 .text{
-    width:100rem;
+    width:100%;
     height:5rem;
-    background-color: blue;
+    background-color: rgb(75, 75, 219);
+    text-align:center;
+
 }
