--- a/02-JavaScript/07-DOM manipulations/Example/02-events/Etan Hw/index.scss
+++ b/02-JavaScript/07-DOM manipulations/Example/02-events/Etan Hw/index.scss
@@ -1,44 +1,47 @@
-body{
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    
-}
-.container{ 
-    height: 20vw;
-    display: flex;
-    overflow-x: scroll;
-    &> * {
-        flex-shrink: 0;
-    };
+body {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+};
+.container {
+  height:max(10vw, 30vw);
+  display: flex;
+  overflow-x: scroll;
+  gap: 1rem;
+  // & > * {
+  //   flex-shrink: 0;
+  // };
+  
+  img{
+    transition: 1s;
+    border-radius: 1rem;
+    &:hover{
+    z-index: 10;
+    transform: scale(1.2)
+  }}
 };
 
-#description{
-    margin: 0;
-    font-family: sans-serif;
-    font-weight: bold;
-    line-height: 20vw;
-   text-align: center;
-background-color: red;
+#description {
+  margin: 0;
+  font-family: sans-serif;
+  font-weight: bold;
+  line-height: 20vh;
+  text-align: center;
+  background-color: red;
+  z-index: 0;
 };
 h3 {
-    span {
-      opacity: 1;
-      transition: all 0.4s ease;
-      transform: translateY(50px);
-      display: inline-block;
-    }
-    .fade {
-      opacity: 0;
-      transform: translateY(0px);
-    }
-  }
-
-
-
-
-
-
+  span {
+    opacity: 1;
+    transition: all 0.4s ease;
+    transform: translateY(50px);
+    display: inline-block;
+  };
+  .fade {
+    opacity: 0;
+    transform: translateY(0px);
+  };
+};
 
 // @font-face{
 //     font-family: disketmono;
