--- a/02-JavaScript/07-DOM manipulations/OmriAharonov/events/homeWork/gallery.scss
+++ b/02-JavaScript/07-DOM manipulations/OmriAharonov/events/homeWork/gallery.scss
@@ -1,19 +1,53 @@
-.box {
-    width: 80vw;
-    height: 500px;
-    margin: 50px auto;
-    background: rgb(207, 173, 21);
-    display: grid;
-    grid-template-rows:  80% 20%;
-    grid-template-columns:  1fr;
+body{
 
-    .gallery{
-        display: flex;
+
+
+.pic {
+    display: flex;
+    background-size: cover;
+    display: inline-block;
+    border-radius: 100px;
+    width: 300px;
+    height: 400px;
+    box-shadow: 0 0 16px rgba(0, 0, 0, 0.5);
+    position: relative;
+    cursor:pointer;
+
+    .text{
+        position: absolute;
+        color: #eee;
+        padding:8px;
+        top:0;
+        bottom:0;
+        right:0;
+        left:0;
+        background-color:  rgba(0, 0, 0, 0.5);
+        border-radius: 100px;
+        text-align: center;
+        padding-top:30%;
+        opacity: 0;
+        transition:.3s;
         
-        img{
-            width: 100%;
-            height: 100%;
-           
+
+        &:hover{
+            opacity: 1;
+            padding-top:40%;
         }
     }
+
 }
+
+}
+
+
+
+
+
+
+
+
+
+//New Zealand Lake Matheson, and the reflections of mount Tasman and Cook
+//Norway northern lights
+//maldives Fesdu Island resort
+//rgba(24, 69, 128, 0.904
