--- a/02-JavaScript/07-DOM manipulations/Example/shani-HW/EVENTS-HW/style.scss
+++ b/02-JavaScript/07-DOM manipulations/Example/shani-HW/EVENTS-HW/style.scss
@@ -1,32 +1,45 @@
-body{
-    margin:0;
-    padding:0;
+body {
+
+  margin: 0;
+  padding: 0;
+  font-family:Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
 }
 
-.music{
-  display:flex;
-  flex-direction: row;  
-  justify-content:center;
-  margin-top:5rem;
+.music {
+  display: flex;
+  flex-direction: row;
+  margin-top: 5rem;
+  overflow-x: scroll;
+  //-ms-overflow-style: none; how do i make it scroll without the scroll bar?
 
-  img{
-      width:20%;
-      height:20%;
-      transition: all .2s ease-in-out; 
-      margin:2rem;
-      &:hover{
-        transform: scale(1.1); 
 
-      }
+  img {
+    width: 50vw;
+    height: 40vh;
+    transition: all .2s ease-in-out;
+    margin: 1rem;
+
+
+
+    &:hover {
+      transform: scale(1.1);
+
+    }
   }
 
-  
+
 }
 
-.text{
-    width:100%;
-    height:5rem;
-    background-color: rgb(75, 75, 219);
-    text-align:center;
+.text {
+  width: 100%;
+  height: 5rem;
+  background-color: rgb(75, 75, 219);
+  text-align: center;
+
+
+  .name {
+    color: rgb(75, 219, 219);
+
+  }
 
 }
