--- a/02-JavaScript/07-DOM manipulations/Example/shani-HW/EVENTS-HW/style.scss
+++ b/02-JavaScript/07-DOM manipulations/Example/shani-HW/EVENTS-HW/style.scss
@@ -18,23 +18,25 @@ body {
     height: 40vh;
     transition: all .2s ease-in-out;
     margin: 1rem;
-
-
+    box-shadow:0 3px 10px rgb(0 0 0 / 0.2);
+    border-radius:1rem;
 
     &:hover {
       transform: scale(1.1);
 
     }
   }
-
+  
 
 }
 
 .text {
   width: 100%;
   height: 5rem;
-  background-color: rgb(75, 75, 219);
+  background-color: black;
   text-align: center;
+  padding-top:1vh;
+  color:white;
 
 
   .name {
