--- a/02-JavaScript/07-DOM manipulations/mishahw2/style.scss
+++ b/02-JavaScript/07-DOM manipulations/mishahw2/style.scss
@@ -1,19 +1,45 @@
-body{
+body {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    align-items: center;
+    padding: 0px;
+    margin: 0px;
+    margin-top: 100px;
+    background-color: rgb(218, 211, 203);
+    font-family: 'The Nautigal', cursive;
 }
 
-.wrapper{
-    display:flex;
+.wrapper {
+    display: flex;
     width: 90vw;
-    border: 1px solid black;
+    border: thick solid rgb(58, 55, 55);
 
-    .box{
-        width: fit-content;
-        height: 100%;
-        img{
+    .box {
+        width: 17%;
+        height: auto;
+        border: thin solid rgb(58, 55, 55);
+
+        img {
             width: 100%;
+            height: 100%;
         }
     }
+
+}
+
+.footer {
+    border: thick solid rgb(58, 55, 55);
+    height: 20vh;
+    width: 90%;
+    background: rgb(231, 202, 195);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 11vw;
+
+    .pet{
+        display: none;
+    }
+
 }
