--- a/02-JavaScript/07-DOM manipulations/artur-hw-DOM manipulations - Events‏/style.scss
+++ b/02-JavaScript/07-DOM manipulations/artur-hw-DOM manipulations - Events‏/style.scss
@@ -7,6 +7,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: #FFFDDE;
+    font-family: 'Roboto', sans-serif;
 }
 .main {
     display: flex;
