--- a/02-JavaScript/07-DOM manipulations/rasheed homeWork/style.scss
+++ b/02-JavaScript/07-DOM manipulations/rasheed homeWork/style.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Moon+Dance&display=swap');
+
 body {
     background-color: rgba(32, 31, 31, 0.815);
 }
@@ -18,14 +19,42 @@ body {
 
 
 
-    &-image {
+    &-image{
         width: 40vh;
         box-shadow: 10px 15px 15px black;
+        cursor: pointer;
+        animation: move 4s linear infinite;
+        
+        @keyframes move {
+            0% {
+                transform: translateX(-10px);
+              }
+            
+            50% {
+              transform: translateX(10px);
+            }
+            100% {
+              transform: translateX(-10px);
+            }
+          }
 
-        img {
+        
+
+
+
+
+        img{
             width: 100%;
             height: 100%;
             border-radius: 5px;
+
+            
+
+            
+
+
+
+
         }
 
 
