--- a/02-JavaScript/07-DOM manipulations/mishahw2/style.scss
+++ b/02-JavaScript/07-DOM manipulations/mishahw2/style.scss
@@ -36,7 +36,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 11vw;
+    font-size: 4em;
 
     .pet{
         display: none;
